#maripbekoff 09.02.2020 13:02 *Added content, changed images and made TimeLine in Learning Block

--- a/kindergarten/index.html
+++ b/kindergarten/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Детский сад N8</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/animate.css">
@@ -111,10 +111,8 @@
                         <img src="images/icons/1.png" width="50%" alt="Услуги">
                         <h3>Обучение</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur vitae provident porro
-                            dolor
-                            nam
-                            enim sapiente eius modi veritatis labore.
+                            В детском саду наши малыши знакомятся с английским и казахским языками, занимаются
+                            творчеством на занятиях по изобразительному искусству.<br>
                         </p>
                         <a href="learning.html">Перейти ></a>
                     </div>
@@ -122,10 +120,8 @@
                         <img src="images/icons/2.jpg" width="50%" alt="Услуги">
                         <h3>Развитие</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur vitae provident porro
-                            dolor
-                            nam
-                            enim sapiente eius modi veritatis labore.
+                            Независимо от потребностей вашего ребенка, каждая из наших программ обеспечит поддержку и
+                            стимул, необходимые для оптимального роста.
                         </p>
                         <a href="#">Перейти ></a>
                     </div>
@@ -133,21 +129,17 @@
                         <img src="images/icons/3.png" width="50%" alt="Услуги">
                         <h3>Дисциплина</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur vitae provident porro
-                            dolor
-                            nam
-                            enim sapiente eius modi veritatis labore.
+                            Мы уделяем большее время ребенку. Игры на открытом воздухе позволяют им играть в командах в
+                            игры с творческими элементами.
                         </p>
                         <a href="#">Перейти ></a>
                     </div>
                     <div class="col-md-3">
                         <img src="images/icons/4.png" width="50%" alt="Услуги">
                         <h3>Взгляд</h3>
-                        <p>￼￼￼￼￼￼￼￼
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur vitae provident porro
-                            dolor
-                            nam
-                            enim sapiente eius modi veritatis labore.
+                        <p>
+                            Мы хотим создать теплую и заботливую атмосферу, где дети чувствуют себя в
+                            безопасности и будут всегда счастливы.
                         </p>
                         <a href="#">Перейти ></a>
                     </div>
@@ -159,15 +151,14 @@
             <div class="container">
                 <h2>Наша галерея счастья</h2>
                 <p>Здесь вы можете увидеть, <br>как дети улыбаются</p>
-                <div class="gallery-grid wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s"">
-                    <img src=" ./images/photo1.jpg" alt="photo">
-                    <img src="./images/photo1.jpg" alt="photo">
-                    <img src="./images/photo1.jpg" alt="photo">
-                    <img src="./images/photo1.jpg" alt="photo">
-                    <img src="./images/photo1.jpg" alt="photo">
-                    <img src="./images/photo1.jpg" alt="photo">
-                    <img src="./images/photo1.jpg" alt="photo">
-                    <img src="./images/photo1.jpg" alt="photo">
+                <div class="grid wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s"">
+                    <img class="grid-item" src="./images/photo1.jpg" alt="photo">
+                    <img class="grid-item" src="./images/photo2.jpg" alt="photo">
+                    <img class="grid-item" src="./images/photo3.jpg" alt="photo">
+                    <img class="grid-item" src="./images/photo4.jpeg" alt="photo">
+                    <img class="grid-item" src="./images/photo5.jpeg" alt="photo">
+                    <img class="grid-item" src="./images/photo6.jpeg" alt="photo">
+                    <img class="grid-item" src="./images/photo7.webp" alt="photo">
                 </div>
             </div>
         </section>
@@ -192,13 +183,14 @@
                     <div class="tab-content" id="pills-tabContent">
                         <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
                             aria-labelledby="pills-home-tab">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Corporis ea dolores totam aspernatur iure deleniti id voluptates porro dolorum debitis?
+                            С нами ребёнок будет чувствовать себя в безопасности. Будет окружен уютом и дружелюбием
+                            других детей.<br>Ключ к успеху и счастья вашего ребенка лежит у нас в Детском саду.
                         </div>
                         <div class="tab-pane fade" id="pills-profile" role="tabpanel"
                             aria-labelledby="pills-profile-tab">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus laboriosam ipsa fuga
-                            dolorem aut laborum reprehenderit voluptatem nostrum consectetur delectus.</div>
+                            В нашем дестком саду используется только высококачественные натуральные продукты имеющие
+                            сертификат качества. Продукты так же проходят контроль мед. работника и наших поваров.
+                        </div>
                     </div>
                     <a href="#">
                         <button onclick="goToSection('feedback')" class="btn btn-outline-primary">Записаться</button>
@@ -214,18 +206,19 @@
             <div class="container wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                 <h3>План садика</h3>
                 <p>Как дети проводят время в нашем садике</p>
-                <div class=" row">
+                <div class="row">
                     <div class="col-md-4">
                         <div class="row no-gutters rounded overflow-hidden position-relative">
                             <div class="col-auto">
                                 <img src="images/numbers/1.png" alt="" width="100px">
                             </div>
                             <div class="col">
-                                <h5>Первая услуга</h5>
-                                <p class="muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
-                                    minima
-                                    ea
-                                    dolores quasi veniam laboriosam?</p>
+                                <h5>Утренняя зарядка</h5>
+                                <p class="muted">
+                                    Проводится одним воспитателем, в летнее время - на улице, под музыкальное
+                                    сопровождение. На зарядке дети играют в спортивные игры с различными спорт
+                                    снаряжениями.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -235,11 +228,11 @@
                                 <img src="images/numbers/2.png" alt="" width="100px">
                             </div>
                             <div class="col">
-                                <h5>Вторая услуга</h5>
-                                <p class="muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
-                                    minima
-                                    ea
-                                    dolores quasi veniam laboriosam?</p>
+                                <h5>Занятия</h5>
+                                <p class="muted">
+                                    Дети учаться читать, писать и говорить. В свободное время, дети играют на свежем
+                                    воздухе.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -249,11 +242,11 @@
                                 <img src="images/numbers/3.png" alt="" width="100px">
                             </div>
                             <div class="col">
-                                <h5>Третья услуга</h5>
-                                <p class="muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
-                                    minima
-                                    ea
-                                    dolores quasi veniam laboriosam?</p>
+                                <h5>Питание</h5>
+                                <p class="muted">
+                                    В нашем дестком саду используется только высококачественные натуральные продукты
+                                    имеющие сертификат качества.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -263,11 +256,12 @@
                                 <img src="images/numbers/4.png" alt="" width="100px">
                             </div>
                             <div class="col">
-                                <h5>Четвертая услуга</h5>
-                                <p class="muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
-                                    minima
-                                    ea
-                                    dolores quasi veniam laboriosam?</p>
+                                <h5>Прогулка</h5>
+                                <p class="muted">
+                                    Дети гуляют в любое время года, на прогулке воспитатели проводят занимательные игры,
+                                    а так же часто и некоторые занятия: творчество, развитие речи, ознакомления с
+                                    окружающим миром.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -277,11 +271,11 @@
                                 <img src="images/numbers/5.png" alt="" width="100px">
                             </div>
                             <div class="col">
-                                <h5>Пятая услуга</h5>
-                                <p class="muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
-                                    minima
-                                    ea
-                                    dolores quasi veniam laboriosam?</p>
+                                <h5>Здоровый сон</h5>
+                                <p class="muted">
+                                    В каждой спальне и группе поддерживается комфортная для организма ребенка
+                                    температура.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -291,11 +285,11 @@
                                 <img src="images/numbers/6.png" alt="" width="100px">
                             </div>
                             <div class="col">
-                                <h5>Шестая услуга</h5>
-                                <p class="muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
-                                    minima
-                                    ea
-                                    dolores quasi veniam laboriosam?</p>
+                                <h5>Закаливающие процедуры</h5>
+                                <p class="muted">
+                                    Воздушные ванны, дорожки здоровья, соляная дорожка. В летнее время года: бассеин,
+                                    хождение босиком, солнечные ванны.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -334,7 +328,7 @@
                                 <div class="card-body">
                                     <blockquote class="blockquote mb-0">
                                         <p>Ребёнок всегда возвращается довольный, спасибо вам!</p>
-                                        <div class="blockquote-footer font-italic">Елена Павловна</div>
+                                        <div class="blockquote-footer font-italic">Татьяна Владимировна</div>
                                     </blockquote>
                                 </div>
                             </div>
@@ -348,7 +342,7 @@
                                 <div class="card-body">
                                     <blockquote class="blockquote mb-0">
                                         <p>Долго искали садик и наконец, попался самый лучший садик из всех</p>
-                                        <div class="blockquote-footer font-italic">Елена Павловна</div>
+                                        <div class="blockquote-footer font-italic">Ирина Анатольевна</div>
                                     </blockquote>
                                 </div>
                             </div>
