--- a/kindergarten/learning.html
+++ b/kindergarten/learning.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>График работы Детского Сада</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/animate.css">
@@ -47,7 +47,7 @@
     <!-- navbar start -->
     <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="images/logo.png" width="100"></a>
+            <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="100"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -79,35 +79,163 @@
         <li class="timeline-event">
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">April 2011 - heute</p>
-                <h3>Geil,Danke! GmbH</h3>
-                <h4>Geschäftsführerin eines Web-Studios</h4>
-                <p><strong>Schwerpunkt: Frontend-Entwicklung</strong><br>Entwickeln von anspruchsvollen, animierten,
-                    responsive und adaptive Webseiten mit HTML5, SCSS, jQuery; für alle Browser, optimiert für
-                    Desktop, Notebook, Smartphones und Tablets (iOS, Android, Windows).</p>
-                <p><strong>Projektmanagement mit Scrum</strong><br>Ständiges Verbessern des agilen Entwicklungsprozesses
-                    beispielsweise durch Grunt, Yeoman, GIT, JIRA und BrowserStack.</p>
+                <p class="timeline-event-thumbnail">08:00 - 8:45</p>
+                <h3>Прием детей</h3>
+                <h4>Мы работаем с 8 часов утра</h4>
+                <p>
+                    Раньше приходят наши повара и помощники воспитателя. До прихода детей
+                    проводят влажную уборку помещений, кварцевание, проветривание групп, приготовление завтрака,
+                    принимает детей медицинская сестра и воспитатель. Медицинская сестра проводит утренний фильтр:
+                    осматривает детей, в сезон вирусных заболеваний, обрабатывает носик оксалиновой мазью, дает
+                    аскорбинку, в течение дня используется "чесночные бусы", масло пихты, проводится повторный осмотр,
+                    кварцевание групп.
+                </p>
             </div>
         </li>
         <li class="timeline-event">
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">November 2009 - März 2011</p>
-                <h3>Freelancer</h3>
-                <h4>Designer und Autor</h4>
-                <p>Konzeption, Design und Produktion von Digitalen Magazinen mit InDesign, der Adobe Digital Publishing
-                    Suite und HTML5. Co-Autorin der Fachbücher "Digitales Publizieren für Tablets" und "Adobe Digital
-                    Publishing Suite" erschienen im dpunkt.verlag.</p>
+                <p class="timeline-event-thumbnail">08:45 - 09:00</p>
+                <h3>Утренняя зарядка</h3>
+                <h4>На свежем воздухе</h4>
+                <p>
+                    Проводится одним воспитателем, в летнее время - на улице, под музыкальное сопровождение. На зарядке
+                    дети играют в спортивные игры с различными спорт снаряжениями.
+                </p>
             </div>
         </li>
         <li class="timeline-event">
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">April 2011 - heute</p>
-                <h3>konplan gmbh</h3>
-                <h4>IT-Consultant</h4>
-                <p><strong>Systemarchitektur, Consulting</strong><br>Konzeption und Modellierung von Systemen und APIs
-                    für Digital Publishing und Entitlement nach SOA</p>
+                <p class="timeline-event-thumbnail">09:00 - 09:20</p>
+                <h3>Завтрак</h3>
+                <p>
+                    В нашем дестком саду используется только высококачественные натуральные продукты имеющие сертификат
+                    качества. Продукты так же проходят контроль мед. работника и наших поваров. Меню детского сада
+                    утдверждено СЭС, и соответствует всем нормам. В случае аллергии у ребенка, в меню вносятся некоторые
+                    изменения, где по возможности наши повара заменяют одни продукты другими.
+                </p>
+            </div>
+        </li>
+        <li class="timeline-event">
+            <label class="timeline-event-icon"></label>
+            <div class="timeline-event-copy">
+                <p class="timeline-event-thumbnail">09:20 - 11:00</p>
+                <h3>Занятия</h3>
+                <h4>по расписанию</h4>
+                <p>
+                    В это время, дети получают необходимую базу, которая станет ключом к их счастью и успеху в будущем.
+                </p>
+            </div>
+        </li>
+        <li class="timeline-event">
+            <label class="timeline-event-icon"></label>
+            <div class="timeline-event-copy">
+                <p class="timeline-event-thumbnail">11:00 - 11:15</p>
+                <h3>Витаминный завтрак</h3>
+                <p>
+                    Прием свежих фруктов, соков.
+                </p>
+            </div>
+        </li>
+        <li class="timeline-event">
+            <label class="timeline-event-icon"></label>
+            <div class="timeline-event-copy">
+                <p class="timeline-event-thumbnail">11:15 - 12:45</p>
+                <h3>Прогулка</h3>
+                <h4>На свежем воздухе</h4>
+                <p>
+                    Дети гуляют в любое время года, на прогулке воспитатели проводят занимательные игры, а так же часто
+                    и некоторые занятия: творчество, развитие речи, ознакомления с окружающим миром. Во время прогулки
+                    детей, мед . сестра проводит проветривание комнат всех групп.
+                </p>
+            </div>
+        </li>
+        <li class="timeline-event">
+            <label class="timeline-event-icon"></label>
+            <div class="timeline-event-copy">
+                <p class="timeline-event-thumbnail">12:45 - 13:30</p>
+                <h3>Обед</h3>
+                <p>
+                    Соответствует утвержденному меню на день. Родители могут заранее договориться с воспитателем о
+                    приходе, и попробовать вкусные и полезные блюда наших поваров.
+                </p>
+            </div>
+        </li>
+        <li class="timeline-event">
+            <label class="timeline-event-icon"></label>
+            <div class="timeline-event-copy">
+                <p class="timeline-event-thumbnail">13:30 - 15:30</p>
+                <h3>Здоровый сон</h3>
+                <p>
+                    В каждой спальне и группе поддерживается комфортная для организма ребенка температура. Постель,
+                    кроватки, полотенца имеют соответствующую маркировку. В спальнях используются в отопительный период
+                    увлажнители воздуха.
+                </p>
+            </div>
+        </li>
+        <li class="timeline-event">
+            <label class="timeline-event-icon"></label>
+            <div class="timeline-event-copy">
+                <p class="timeline-event-thumbnail">15:30 - 16:00</p>
+                <h3>Процедуры</h3>
+                <p>
+                    Воздушные ванны, дорожки здоровья, соляная дорожка. В летнее время года: бассеин, хождение босиком,
+                    солнечные ванны.
+                </p>
+            </div>
+        </li>
+        <li class="timeline-event">
+            <label class="timeline-event-icon"></label>
+            <div class="timeline-event-copy">
+                <p class="timeline-event-thumbnail">16:00 - 16:10</p>
+                <h3>Полдник</h3>
+                <p>
+                    По меню на день.
+                </p>
+            </div>
+        </li>
+        <li class="timeline-event">
+            <label class="timeline-event-icon"></label>
+            <div class="timeline-event-copy">
+                <p class="timeline-event-thumbnail">16:10 - 17:00</p>
+                <h3>Занятия</h3>
+                <h4>Творчество, подвижные игры, танцы</h4>
+                <p>
+
+                </p>
+            </div>
+        </li>
+        <li class="timeline-event">
+            <label class="timeline-event-icon"></label>
+            <div class="timeline-event-copy">
+                <p class="timeline-event-thumbnail">17:00 - 17:30</p>
+                <h3>Ужин</h3>
+                <h4>На свежем воздухе</h4>
+                <p>
+                    Соответствует утвержденному меню на день. После ужина - прогулка, а так же посещение доп. спортивных
+                    секций по желанию.
+                </p>
+            </div>
+        </li>
+        <li class="timeline-event">
+            <label class="timeline-event-icon"></label>
+            <div class="timeline-event-copy">
+                <p class="timeline-event-thumbnail">17:30 - 17:55</p>
+                <h3>Прогулка</h3>
+                <h4>На свежем воздухе</h4>
+                <p>
+                    Дети гуляют в любое время года, на прогулке воспитатели проводят занимательные игры, а так же часто
+                    и некоторые занятия: творчество, развитие речи, ознакомления с окружающим миром. Во время прогулки
+                    детей, мед . сестра проводит проветривание комнат всех групп.
+                </p>
+            </div>
+        </li>
+        <li class="timeline-event">
+            <label class="timeline-event-icon"></label>
+            <div class="timeline-event-copy">
+                <p class="timeline-event-thumbnail">18:00 - 19:00</p>
+                <h3>Дежурная группа</h3>
             </div>
         </li>
     </ul>
