--- a/kindergarten/index.html
+++ b/kindergarten/index.html
@@ -44,7 +44,7 @@
         <img src="images/whatsapp.png" alt="" width="64">
     </a>
     <!-- navbar start -->
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav id="navbar" class="navbar navbar-expand-xl navbar-light bg-light sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="images/logo.png" width="100"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -106,8 +106,8 @@
     <section id="about">
         <div class="container-fluid services-bg">
             <div class="container services pb-5 fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
-                <div class=" row">
-                    <div class="col-md-3">
+                <div class="row">
+                    <div class="col-lg-3">
                         <img src="images/icons/1.png" width="50%" alt="Услуги">
                         <h3>Обучение</h3>
                         <p>
@@ -116,7 +116,7 @@
                         </p>
                         <a href="learning.html">Перейти ></a>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-3">
                         <img src="images/icons/2.jpg" width="50%" alt="Услуги">
                         <h3>Развитие</h3>
                         <p>
@@ -125,7 +125,7 @@
                         </p>
                         <a href="#">Перейти ></a>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-3">
                         <img src="images/icons/3.png" width="50%" alt="Услуги">
                         <h3>Дисциплина</h3>
                         <p>
@@ -134,7 +134,7 @@
                         </p>
                         <a href="#">Перейти ></a>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-3">
                         <img src="images/icons/4.png" width="50%" alt="Услуги">
                         <h3>Взгляд</h3>
                         <p>
@@ -151,7 +151,7 @@
             <div class="container">
                 <h2>Наша галерея счастья</h2>
                 <p>Здесь вы можете увидеть, <br>как дети улыбаются</p>
-                <div class="grid wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s"">
+                <div class="grid wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                     <img class="grid-item" src="./images/photo1.jpg" alt="photo">
                     <img class="grid-item" src="./images/photo2.jpg" alt="photo">
                     <img class="grid-item" src="./images/photo3.jpg" alt="photo">
@@ -184,7 +184,7 @@
                         <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
                             aria-labelledby="pills-home-tab">
                             С нами ребёнок будет чувствовать себя в безопасности. Будет окружен уютом и дружелюбием
-                            других детей.<br>Ключ к успеху и счастья вашего ребенка лежит у нас в Детском саду.
+                            других детей.Ключ к успеху и счастья вашего ребенка лежит в нашем Детском саду.
                         </div>
                         <div class="tab-pane fade" id="pills-profile" role="tabpanel"
                             aria-labelledby="pills-profile-tab">
@@ -228,7 +228,7 @@
                                 <img src="images/numbers/2.png" alt="" width="100px">
                             </div>
                             <div class="col">
-                                <h5>Занятия</h5>
+                                <h5>Активность</h5>
                                 <p class="muted">
                                     Дети учаться читать, писать и говорить. В свободное время, дети играют на свежем
                                     воздухе.
@@ -307,7 +307,7 @@
         <div class="container pb-5 pt-5">
             <h3 class="text-center">Отзывы родителей</h3>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-lg-4">
                     <div class="wrap">
                         <div class="gradient">
                             <div class="card">
@@ -321,7 +321,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-lg-4">
                     <div class="wrap">
                         <div class="gradient">
                             <div class="card">
@@ -335,7 +335,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-lg-4">
                     <div class="wrap">
                         <div class="gradient">
                             <div class="card">
