--- a/kindergarten/learning.html
+++ b/kindergarten/learning.html
@@ -45,7 +45,7 @@
         <img src="images/whatsapp.png" alt="" width="64">
     </a>
     <!-- navbar start -->
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav id="navbar" class="navbar navbar-expand-xl navbar-light bg-light sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="100"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
