--- a/kindergarten/index.html
+++ b/kindergarten/index.html
@@ -5,14 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <<<<<<< HEAD <title>Ясли Сад №8 - Лучшее место для ваших детей!</title>
-        =======
-        <title>Детский сад N8</title>
-        >>>>>>> 2ed99a5f520b823222cdd4007b5de7c5a2012634
-        <!-- css -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="style/animate.css">
-        <link rel="stylesheet" href="style/style.css">
+    <title>Ясли Сад №8 - Лучшее место для ваших детей!</title>
+    <!-- css -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style/animate.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
@@ -107,7 +104,7 @@
                             Независимо от потребностей вашего ребенка, каждая из наших программ обеспечит поддержку и
                             стимул, необходимые для оптимального роста.
                         </p>
-                        <a href="#">Перейти ></a>
+                        <a href="growth.html">Перейти ></a>
                     </div>
                     <div class="col-md-3">
                         <img src="images/icons/3.png" width="50%" alt="Услуги">
@@ -116,7 +113,7 @@
                             Мы уделяем большее время ребенку. Игры на открытом воздухе позволяют им играть в командах в
                             игры с творческими элементами.
                         </p>
-                        <a href="#">Перейти ></a>
+                        <a href="discipline.html">Перейти ></a>
                     </div>
                     <div class="col-md-3">
                         <img src="images/icons/4.png" width="50%" alt="Услуги">
@@ -125,7 +122,7 @@
                             Мы хотим создать теплую и заботливую атмосферу, где дети чувствуют себя в
                             безопасности и будут всегда счастливы.
                         </p>
-                        <a href="#">Перейти ></a>
+                        <a href="mind.html">Перейти ></a>
                     </div>
                 </div>
             </div>
@@ -138,13 +135,13 @@
                 <h2>Наша галерея счастья</h2>
                 <p>Здесь вы можете увидеть, <br>как дети улыбаются</p>
                 <div class="grid wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s"">
-                    <img class=" grid-item" src="./images/photo1.jpg" alt="photo">
-                    <img class="grid-item" src="./images/photo2.jpg" alt="photo">
-                    <img class="grid-item" src="./images/photo3.jpg" alt="photo">
-                    <img class="grid-item" src="./images/photo4.jpeg" alt="photo">
-                    <img class="grid-item" src="./images/photo5.jpeg" alt="photo">
-                    <img class="grid-item" src="./images/photo6.jpeg" alt="photo">
-                    <img class="grid-item" src="./images/photo7.webp" alt="photo">
+                    <img class=" grid-item" src="./images/gallery/photo1.jpg" alt="photo">
+                    <img class="grid-item" src="./images/gallery/photo2.jpg" alt="photo">
+                    <img class="grid-item" src="./images/gallery/photo3.jpg" alt="photo">
+                    <img class="grid-item" src="./images/gallery/photo4.jpeg" alt="photo">
+                    <img class="grid-item" src="./images/gallery/photo5.jpeg" alt="photo">
+                    <img class="grid-item" src="./images/gallery/photo6.jpeg" alt="photo">
+                    <img class="grid-item" src="./images/gallery/photo7.webp" alt="photo">
                 </div>
             </div>
         </section>
