--- a/kindergarten/learning.html
+++ b/kindergarten/learning.html
@@ -75,6 +75,7 @@
     </nav>
     <!-- navbar end -->
 
+    <!-- timeline start -->
     <ul class="timeline">
         <li class="timeline-event">
             <label class="timeline-event-icon"></label>
@@ -239,10 +240,13 @@
             </div>
         </li>
     </ul>
+    <!-- timeline end -->
 
+    <!-- footer start -->
     <footer class="text-center">
         <p>Ясли Сад №8. Разработано студентами группы ТЗИ-19Р</p>
     </footer>
+    <!-- footer end -->
 
     <!-- javascript -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
