--- a/kindergarten/growth.html
+++ b/kindergarten/growth.html
@@ -75,9 +75,108 @@
     </nav>
     <!-- navbar end -->
 
+    <!-- header start -->
     <div class="main">
         <h1>Дополнительные секции</h1>
     </div>
+    <!-- header end -->
+
+    <!-- courses start -->
+    <section class="courses">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h4>Робототехника</h4>
+                    <img src="images/courses/1.jpg" alt="">
+                    <button class="btn btn-outline-primary" data-toggle="modal"
+                        data-target="#exampleModalCenter">Подробнее</button>
+                </div>
+                <div class="col-md-4">
+                    <h4>Шахматы</h4>
+                    <img src="images/courses/2.jpg" alt="">
+                    <button class="btn btn-outline-primary" data-toggle="modal"
+                        data-target="#exampleModalCenter2">Подробнее</button>
+                </div>
+                <div class="col-md-4">
+                    <h4>Арифметика</h4>
+                    <img src="images/courses/3.png" alt="">
+                    <button class="btn btn-outline-primary" data-toggle="modal"
+                        data-target="#exampleModalCenter3">Подробнее</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- courses end -->
+
+    <!-- modal 1st course start -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Секция робототехники</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" style="padding: 0;">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Секция робототехники поможет заботливым родителям дать своему ребенку перспективное инженерное
+                    образование уже с раннего возраста.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Закрыть</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- modal 1st course end -->
+
+    <!-- modal 2nd course start -->
+    <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Секция шахмат</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" style="padding: 0;">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Шахматы помогут развить ум вашим детям с раннего возраста! Ваши дети смогут научиться думать
+                    нестандартно!
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Закрыть</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- modal 2nd course end -->
+
+    <!-- modal 3th course start -->
+    <div class="modal fade" id="exampleModalCenter3" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Секция арифметики</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" style="padding: 0;">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Арифметика это наука, которая очень хорошо развивает и раскрывает аналитичиские навыки. Вашему
+                    ребенку это будет безусловно полезно
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Закрыть</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- modal 3th course end -->
+
 
     <!-- footer start -->
     <footer class="text-center">
