#maripbekoff 12.02.2020 16:38 *Added 4 pages, fixed navbar

--- a/kindergarten/index.html
+++ b/kindergarten/index.html
@@ -88,7 +88,7 @@
         <div class="container-fluid services-bg">
             <div class="container services pb-5 fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
                 <div class="row">
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 mb-5">
                         <img src="images/icons/1.png" width="50%" alt="Услуги">
                         <h3>Обучение</h3>
                         <p>
@@ -97,7 +97,7 @@
                         </p>
                         <a href="learning.html">Перейти ></a>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 mb-5">
                         <img src="images/icons/2.jpg" width="50%" alt="Услуги">
                         <h3>Развитие</h3>
                         <p>
@@ -106,7 +106,7 @@
                         </p>
                         <a href="growth.html">Перейти ></a>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 mb-5">
                         <img src="images/icons/3.png" width="50%" alt="Услуги">
                         <h3>Дисциплина</h3>
                         <p>
@@ -115,7 +115,7 @@
                         </p>
                         <a href="discipline.html">Перейти ></a>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 mb-5">
                         <img src="images/icons/4.png" width="50%" alt="Услуги">
                         <h3>Взгляд</h3>
                         <p>
@@ -134,14 +134,35 @@
             <div class="container">
                 <h2>Наша галерея счастья</h2>
                 <p>Здесь вы можете увидеть, <br>как дети улыбаются</p>
-                <div class="grid wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s"">
-                    <img class=" grid-item" src="./images/gallery/photo1.jpg" alt="photo">
-                    <img class="grid-item" src="./images/gallery/photo2.jpg" alt="photo">
-                    <img class="grid-item" src="./images/gallery/photo3.jpg" alt="photo">
-                    <img class="grid-item" src="./images/gallery/photo4.jpeg" alt="photo">
-                    <img class="grid-item" src="./images/gallery/photo5.jpeg" alt="photo">
-                    <img class="grid-item" src="./images/gallery/photo6.jpeg" alt="photo">
-                    <img class="grid-item" src="./images/gallery/photo7.webp" alt="photo">
+                <div class="row flex-wrap">
+                    <div class="col-md-3">
+                        <img src="images/gallery/IMG_6197-25-04-18-11-42.jpg" alt="">
+                        <img src="images/gallery/IMG_6217-25-04-18-11-41.jpg" alt="">
+                        <img src="images/gallery/IMG_6240-26-04-18-12-23.jpg" alt="">
+                        <img src="images/gallery/IMG_9285.jpg" alt="">
+                        <img src="images/gallery/IMG_9934.JPG" alt="">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="images/gallery/OVDP4767.JPG" alt="">
+                        <img src="images/gallery/Аққу.jpg" alt="">
+                        <img src="images/gallery/Женимпаздар1.JPG" alt="">
+                        <img src="images/gallery/жода жүру ережесі.jpg" alt="">
+                        <img src="images/gallery/топ1.jpg" alt="">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="images/gallery/DSC_0231.JPG" alt="">
+                        <img src="images/gallery/DSC_0248.JPG" alt="">
+                        <img src="images/gallery/DSC_0250.JPG" alt="">
+                        <img src="images/gallery/DSC_0257.JPG" alt="">
+                        <img src="images/gallery/DSC_1068.JPG" alt="">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="images/gallery/DSC_1074.JPG" alt="">
+                        <img src="images/gallery/DSC_1081.JPG" alt="">
+                        <img src="images/gallery/DSC_1084.JPG" alt="">
+                        <img src="images/gallery/DSC_1097.JPG" alt="">
+                        <img src="images/gallery/DSC_1101.JPG" alt="">
+                    </div>
                 </div>
         </section>
         <!-- gallery end -->
