--- a/kindergarten/mind.html
+++ b/kindergarten/mind.html
@@ -9,7 +9,7 @@
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/animate.css">
-    <link rel="stylesheet" href="style/growth.css">
+    <link rel="stylesheet" href="style/mind.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
 
@@ -54,20 +54,20 @@
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
                 <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="learning.html">Обучение</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="growth.html">Развитие</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="discipline.html">Дисциплина</a>
+                    </li>
                     <li class="nav-item active">
-                        <a class="nav-link" onclick="goToSection('home')" href="#home">Главная</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" onclick="goToSection('about')" href="#about">О нас</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" onclick="goToSection('plan')" id="goToPlan" href="#plan">План</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" onclick="goToSection('reviews')" id="goToReviews" href="#reviews">Отзывы</a>
+                        <a class="nav-link" href="#">Взгляд</a>
                     </li>
                     <li class="nav-item text-center" id="feedbackBtn">
-                        <a class="nav-link" onclick="goToSection('feedback')" href="#feedback">Записаться</a>
+                        <a class="nav-link" href="index.html">Записаться</a>
                     </li>
                 </ul>
             </div>
@@ -78,6 +78,57 @@
     <div class="main">
         <h1>Наш взгляд</h1>
     </div>
+
+    <section id="mind">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card border-secondory">
+                        <!-- card-header -->
+                        <div class="card-header bg-info text-white"></div>
+                        <!-- card-body -->
+                        <img src="./images/team/_DSC0007.jpg" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Ольга Владимировна</h5>
+                            <p class="card-text text-secondary">Заведующий садика</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card border-secondory">
+                        <!-- card-header -->
+                        <div class="card-header bg-info text-white"></div>
+                        <!-- card-body -->
+                        <img src="./images/team/DSC_0264.JPG" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <!-- HTML форма -->
+                            <h5 class="card-title">Гаврилова Анастасия</h5>
+                            <p class="card-text text-secondary">Заведующий садика</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card border-secondory">
+                        <!-- card-header -->
+                        <div class="card-header bg-info text-white"></div>
+                        <!-- card-body -->
+                        <img src="./images/team/DSC_0225.JPG" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <!-- HTML форма -->
+                            <h5 class="card-title">Елена Владимировна</h5>
+                            <p class="card-text text-secondary">Заведующий садика</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="team">
+        <div class="container-fluid">
+            
+        </div>
+    </section>
 
     <!-- footer start -->
     <footer class="text-center">
