--- a/kindergarten/discipline.html
+++ b/kindergarten/discipline.html
@@ -9,7 +9,7 @@
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/animate.css">
-    <link rel="stylesheet" href="style/growth.css">
+    <link rel="stylesheet" href="style/discipline.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
 
@@ -54,20 +54,20 @@
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
                 <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="learning.html">Обучение</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="growth.html">Развитие</a>
+                    </li>
                     <li class="nav-item active">
-                        <a class="nav-link" onclick="goToSection('home')" href="#home">Главная</a>
+                        <a class="nav-link" href="#">Дисциплина</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="goToSection('about')" href="#about">О нас</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" onclick="goToSection('plan')" id="goToPlan" href="#plan">План</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" onclick="goToSection('reviews')" id="goToReviews" href="#reviews">Отзывы</a>
+                        <a class="nav-link" href="mind.html">Взгляд</a>
                     </li>
                     <li class="nav-item text-center" id="feedbackBtn">
-                        <a class="nav-link" onclick="goToSection('feedback')" href="#feedback">Записаться</a>
+                        <a class="nav-link" href="index.html">Записаться</a>
                     </li>
                 </ul>
             </div>
@@ -78,6 +78,88 @@
     <div class="main">
         <h1>Как дети проводят время</h1>
     </div>
+
+    <!-- discipline start -->
+    <section id="discipline">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="images/gallery/DSC_6073.jpg" class="card-img" alt="..." height="100%">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Шахматы</h5>
+                                    <div class="ux-line"></div>
+                                    <p class="card-text">Игра в шахматы расширяет кругозор, учит думать, быть
+                                        внимательным, запоминать, сравнивать, обобщать, предвидеть результаты своей
+                                        деятельности.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="images/gallery/DSC_0248.JPG" class="card-img" alt="..." height="100%">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Арифметика</h5>
+                                    <div class="ux-line"></div>
+                                    <p class="card-text">
+                                        Используется для обучения на наглядном примере, который помогает детям понять
+                                        принципы счета, состав числа.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="images/gallery/IMG_6197-25-04-18-11-42.jpg" class="card-img" alt="..."
+                                    height="100%">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Физкультура</h5>
+                                    <div class="ux-line"></div>
+                                    <p class="card-text">На физкультуре дети проводят разминку, играют в командные
+                                        спортивные игры с различными спорт снаряжениями.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="images/gallery/photo5.jpg" class="card-img" alt="..." height="100%">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Хореография</h5>
+                                    <div class="ux-line"></div>
+                                    <p class="card-text">Хореография развивает творческое мышление, музыкальность, ритм,
+                                        память, учит быстро реагировать и тонко чувствовать происходящее.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- discilpine end -->
 
     <!-- footer start -->
     <footer class="text-center">
