--- a/kindergarten/learning.html
+++ b/kindergarten/learning.html
@@ -55,19 +55,19 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" onclick="goToSection('home')" href="#home">Главная</a>
+                        <a class="nav-link" href="#">Обучение</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="goToSection('about')" href="#about">О нас</a>
+                        <a class="nav-link" href="growth.html">Развитие</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="goToSection('plan')" id="goToPlan" href="#plan">План</a>
+                        <a class="nav-link" href="discipline.html">Дисциплина</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="goToSection('reviews')" id="goToReviews" href="#reviews">Отзывы</a>
+                        <a class="nav-link" href="mind.html">Взгляд</a>
                     </li>
                     <li class="nav-item text-center" id="feedbackBtn">
-                        <a class="nav-link" onclick="goToSection('feedback')" href="#feedback">Записаться</a>
+                        <a class="nav-link" href="index.html">Записаться</a>
                     </li>
                 </ul>
             </div>
